Улучшен экран бронирований: название отеля, город, итоговая сумма